Modified stuff. Quick commit.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,9 @@
 project(Wintermute)
 cmake_minimum_required(VERSION 2.8)
+set(WINTERMUTE_MAJOR_VERSION "0")
+set(WINTERMUTE_MINOR_VERSION "01")
+set(WINTERMUTE_VERSION
+    ${WINTERMUTE_MAJOR_VERSION}.${WINTERMUTE_MINOR_VERSION})
 #
 # Modules
 #
@@ -8,8 +12,6 @@ list(APPEND CMAKE_MODULE_PATH "cmake/Modules")
 #
 # Packages
 #
-include(FindQt4)
-include(FindBoost)
 find_package(WntrData REQUIRED)
 find_package(WntrLing REQUIRED)
 find_package(WntrNtwk REQUIRED)
@@ -23,7 +25,7 @@ find_package(Qt4 COMPONENTS
     REQUIRED)
 
 #
-# Wintermute SDK
+# WNTR SDK
 #
 include(WinterDefaults)
 include(WinterLibsDependencies)
@@ -32,7 +34,7 @@ include("${QT_USE_FILE}")
 #
 # Files
 #
-file(GLOB WINTERMUTE_SHPP "include/wintermute/*.hpp")
+file(GLOB WINTERMUTE_SHPP "include/wntr/*.hpp")
 file(GLOB WINTERMUTE_SCPP "src/*.cpp")
 
 #
@@ -45,7 +47,6 @@ set(WINTERMUTE_BIN_INSTALL_DIR "${WINTER_BIN_INSTALL_DIR}")
 set(WINTERMUTE_INCLUDE_DIRS "${WNTRDATA_INCLUDE_DIRS}"
     ${WNTRLING_INCLUDE_DIRS}
     ${WNTRNTWK_INCLUDE_DIRS}
-    ${QT_INCLUDE_DIR}
     ${Boost_INCLUDE_DIR}
     )
 set(WINTERMUTE_LIBRARIES "${WNTRDATA_LIBRARIES}"
@@ -54,14 +55,30 @@ set(WINTERMUTE_LIBRARIES "${WNTRDATA_LIBRARIES}"
     ${QT_LIBRARIES}
     ${Boost_LIBRARIES}
     )
-#set(WINTERMUTE_CMAKE_INSTALL_DIR "${CMAKE_INSTALL_DIR}/cmake/Wintermute")
+set(WINTERMUTE_INCLUDE_DIR "${WINTER_INCLUDE_INSTALL_DIR}/wntr" CACHE PATH "Includes directory.")
+set(WINTERMUTE_CMAKE_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/share/cmake/Wintermute" CACHE PATH "CMake directory.")
 # ^^ might be needed for plugin system.
 
 #
 # Include directories
 #
 include_directories(${WINTERMUTE_INCLUDE_DIRS}
-    "${PROJECT_SOURCE_DIR}/include/wintermute")
+    "${PROJECT_SOURCE_DIR}/include/wntr")
+
+#
+# Configs
+#
+configure_file("${PROJECT_SOURCE_DIR}/cmake/WintermuteConfig.cmake.in"
+    "${PROJECT_BINARY_DIR}/InstallFiles/WintermuteConfig.cmake" @ONLY)
+
+configure_file("${PROJECT_SOURCE_DIR}/cmake/WintermuteConfigVersion.cmake.in"
+    "${PROJECT_BINARY_DIR}/InstallFiles/WintermuteConfigVersion.cmake" @ONLY)
+
+configure_file("${PROJECT_SOURCE_DIR}/Wintermute.pc.in"
+   "${PROJECT_BINARY_DIR}/InstallFiles/Wintermute.pc" @ONLY)
+
+configure_file("${PROJECT_SOURCE_DIR}/config.hpp.in"
+    "${PROJECT_BINARY_DIR}/config.hpp")
 
 #
 # Targets
@@ -76,7 +93,24 @@ target_link_libraries(wintermute
 #
 # Installs
 #
+
+install(FILES "${PROJECT_BINARY_DIR}/InstallFiles/Wintermute.pc"
+    DESTINATION "${WINTER_LIB_INSTALL_DIR}/pkgconfig/")
+
+install(FILES "${PROJECT_BINARY_DIR}/InstallFiles/WintermuteConfig.cmake"
+    DESTINATION "${WINTERMUTE_CMAKE_INSTALL_DIR}")
+
+install(FILES "${PROJECT_BINARY_DIR}/InstallFiles/WintermuteConfigVersion.cmake"
+    DESTINATION "${WINTERMUTE_CMAKE_INSTALL_DIR}")
+
+install(FILES ${CMAKE_MODULES}
+    DESTINATION "${CMAKE_MODULE_DIR}")
+
+install(FILES ${WINTERMUTE_SHPP} "${PROJECT_BINARY_DIR}/config.hpp"
+    DESTINATION "${WINTERMUTE_INCLUDE_DIR}"
+    COMPONENT dev)
+
 install(TARGETS wintermute
     RUNTIME DESTINATION "${WINTERMUTE_BIN_INSTALL_DIR}"
-    # Need to give permissions to write/read from '{PREFIX}/wintermute' but also executable by anyone
+    # Need to give permissions to write/read from '{PREFIX}' but also executable by anyone
     COMPONENT bin)
