The plug-in system is now functioning. Refer to the sample plug-ins in git@github.com:wntr/plugins.git to see how a sample plug-in works. Currently, we're using the Qt plug-in model but I'm guessing we could work to support 'legacy' or non-Qt based plug-ins (an alternate specification would be required, and instead of QPluginLoader; we'd use QLibrary to save our asses). Plug-ins can be loaded dynamically from the command line, as well. Any .so file in the directory 'WINTER_LIB_INSTALL_DIR'/wntr is assumed to be a plug-in and is loaded.

--- a/config.hpp.in
+++ b/config.hpp.in
@@ -30,6 +30,7 @@
 #include <string>
 
 #define WINTERMUTE_VERSION @WINTERMUTE_VERSION@
+#define WINTER_PLUGINS_PATH "@WINTER_LIB_INSTALL_DIR@/wntr"
 
 #endif // __CONFIG_HPP__
 
