--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,8 +21,8 @@ find_package(Boost 1.42 COMPONENTS
     REQUIRED)
 find_package(Qt4 4.4.3 COMPONENTS
     QtCore
+    QtGui
     QtDBus
-    QT_DONT_USE_QTGUI
     REQUIRED)
 
 #
