--- a/config.hpp.in
+++ b/config.hpp.in
@@ -31,11 +31,20 @@
 #define WINTER_PLUGINS_PATH "@WINTER_LIB_INSTALL_DIR@/wntr"
 
 #if @WINTERMUTE_USE_GUI@ == true
-#define WINTERMUTE_USING_GUI true
+#define WINTERMUTE_USING_GUI
 #else
 #undef WINTERMUTE_USING_GUI
 #endif
 
+// Check if Wintermute's built with X11 (GUI) support. (We're targeting UNIX-based systems)
+#ifdef WINTERMUTE_USING_GUI
+#include <QApplication>
+#define WNTR_APPLICATION QApplication
+#else
+#include <QCoreApplication>
+#define WNTR_APPLICATION QCoreApplication
+#endif
+
 #endif // __CONFIG_HPP__
 
-// kate: indent-mode cstyle; space-indent on; indent-width 4;
+// kate: indent-mode cstyle; space-indent on; indent-width 0;
