Added new features to plug-ins and re-implemented D-Bus.
** Added the plug-in specification file; documentation about it is (briefly) in plugin.hpp,
   more coming soon.

** Revamped Wintermute, so that it can run as a daemon of sorts (by running the network and
   plug-in executables separately).

** BUG: Can't connect the two primary modules (Network and Plugin) with the Master module in
   order to do clean terminations.

** BUG: When executing Q(Core)Application::quit() [or exit()], nothing happens. I'm assuming
   that there's no event loop and therefore manual terminations (via the C function exit()) is
   necessary.

** BUG: Plug-in instances don't communicate properly with the root Plugin module.

--- a/config.hpp.in
+++ b/config.hpp.in
@@ -28,7 +28,9 @@
 #cmakedefine DEBUG
 
 #define WINTERMUTE_VERSION @WINTERMUTE_VERSION@
-#define WINTER_PLUGINS_PATH "@WINTER_LIB_INSTALL_DIR@/wntr"
+#define WINTER_PLUGIN_PATH "@WINTER_PLUGIN_INSTALL_DIR@"
+#define WINTER_PLUGINSPEC_PATH "@WINTER_PLUGINSPEC_INSTALL_DIR@"
+
 
 #if @WINTERMUTE_USE_GUI@ == true
 #define WINTERMUTE_USING_GUI
