--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,9 +58,9 @@ set(WINTERMUTE_INCLUDE_DIRS "${WNTRLING_INCLUDE_DIRS}"
     ${QT_INCLUDE_DIRS}
     ${CURSES_INCLUDE_DIR}
     )
-set(WINTERMUTE_LIBRARIES "${WNTRLING_LIBRARIES}"
-    ${WNTRDATA_LIBRARIES}
-    ${WNTRNTWK_LIBRARIES}
+set(WINTERMUTE_LIBRARIES "wntrling"
+    wntrdata
+    wntrntwk
     ${Boost_LIBRARIES}
     ${QT_LIBRARIES}
     ${CURSES_LIBRARIES}
