Modularized CMake configuration.
CMake configuration now easier to maintain and read.

--- a/Doxyfile.in
+++ b/Doxyfile.in
@@ -31,7 +31,7 @@ PROJECT_NAME           = Wintermute
 # This could be handy for archiving the generated documentation or 
 # if some version control system is used.
 
-PROJECT_NUMBER         = "0.01 alpha"
+PROJECT_NUMBER         = @WINTERMUTE_VERSION@
 
 # Using the PROJECT_BRIEF tag one can provide an optional one line description
 # for a project that appears at the top of each page and should give viewer
@@ -44,7 +44,7 @@ PROJECT_BRIEF          = "Artificial intelligence for Common Man."
 # exceed 55 pixels and the maximum width should not exceed 200 pixels. 
 # Doxygen will copy the logo to the output directory.
 
-PROJECT_LOGO           = /home/jacky/Pictures/Development/Wintermute/wintermute-profile.png
+PROJECT_LOGO           = @PROJECT_LOGO@
 
 # The OUTPUT_DIRECTORY tag is used to specify the (relative or absolute) 
 # base path where the generated documentation will be put. 
