Moved parts of top-level CMakeLists.txt to correct place.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,3 +9,12 @@ QT_WRAP_CPP(WINTERMUTE_SOURCES ${WINTERMUTE_MOC_FILES})
 #
 add_executable(wintermute ${WINTERMUTE_SOURCES})
 target_link_libraries(wintermtue ${WINTERMUTE_LIBRARIES})
+
+install(TARGETS wintermute
+    RUNTIME DESTINATION "${WINTERMUTE_BIN_INSTALL_DIR}"
+    COMPONENT bin)
+
+install(FILES ${WINTERMUTE_MOC_FILES}
+    DESTINATION ${WINTERMUTE_INCLUDE_DIR}
+    COMPONENT dev)
+
