Heavy D-Bus implementation done.
** Wintermute can be run as a daemon! Possible implementing an init.d script
   once the kinks are ironed out (see below).

** Implemented a GenericAdaptor for simple D-Bus adaptor implementations
   Implemented simple forking of the three sub processes (ling, data, ntwk)
   and manages plug-ins directly.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,10 @@
 project(Wintermute)
 cmake_minimum_required(VERSION 2.8)
 set(WINTERMUTE_MAJOR_VERSION 0)
-set(WINTERMUTE_MINOR_VERSION 01)
+set(WINTERMUTE_MINOR_VERSION 0)
+set(WINTERMUTE_MICRO_VERSION 1)
 set(WINTERMUTE_VERSION
-    ${WINTERMUTE_MAJOR_VERSION}.${WINTERMUTE_MINOR_VERSION})
+    ${WINTERMUTE_MAJOR_VERSION}.${WINTERMUTE_MINOR_VERSION}${WINTERMUTE_MICRO_VERSION})
 #
 # Modules
 #
@@ -58,9 +59,9 @@ set(WINTERMUTE_INCLUDE_DIRS "${WNTRLING_INCLUDE_DIRS}"
     ${QT_INCLUDE_DIRS}
     ${CURSES_INCLUDE_DIR}
     )
-set(WINTERMUTE_LIBRARIES "wntrling"
-    wntrdata
-    wntrntwk
+set(WINTERMUTE_LIBRARIES "${WNTRLING_LIBRARIES}"
+    ${WNTRDATA_LIBRARIES}
+    ${WNTRNTWK_LIBRARIES}
     ${Boost_LIBRARIES}
     ${QT_LIBRARIES}
     ${CURSES_LIBRARIES}
@@ -81,7 +82,8 @@ endif()
 # Include directories
 #
 include_directories(${WINTERMUTE_INCLUDE_DIRS}
-    "${PROJECT_SOURCE_DIR}/include/wntr")
+    "${PROJECT_SOURCE_DIR}/include/wntr"
+    "${PROJECT_SOURCE_DIR}/include")
 
 QT4_WRAP_CPP(MOC_CODE "${WINTERMUTE_SHPP}")
 
