--- a/config.hpp.in
+++ b/config.hpp.in
@@ -27,6 +27,7 @@
 
 #cmakedefine DEBUG
 
+#define WINTERMUTE_SERVICE_NAME "org.thesii.Wintermute"
 #define WINTERMUTE_VERSION @WINTERMUTE_VERSION@
 #define WINTER_PLUGIN_PATH "@WINTER_PLUGIN_INSTALL_DIR@"
 #define WINTER_PLUGINSPEC_PATH "@WINTER_PLUGINSPEC_INSTALL_DIR@"
