More of a touch-up than anything else.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,20 +1,22 @@
 project(WintermuteCore)
 
-file(GLOB WINTERMUTE_SOURCES "*.cpp")
-file(GLOB WINTERMUTE_MOC_FILES "*.hpp")
-QT_WRAP_CPP(WINTERMUTE_SOURCES ${WINTERMUTE_MOC_FILES})
+include(WintermuteDefaults)
+include(WintermuteMacros)
 
-#
-# Targets
-#
+file(GLOB WINTERMUTE_SOURCES "*.cpp")
+file(GLOB WINTERMUTE_HEADERS "*.hpp")
+QT4_WRAP_CPP(WINTERMUTE_SOURCES ${WINTERMUTE_HEADERS})
+
+## Targets
+
 add_executable(wintermute ${WINTERMUTE_SOURCES})
-target_link_libraries(wintermtue ${WINTERMUTE_LIBRARIES})
+target_link_libraries(wintermute ${WINTERMUTE_LIBRARIES})
 
 install(TARGETS wintermute
-    RUNTIME DESTINATION "${WINTERMUTE_BIN_INSTALL_DIR}"
+    RUNTIME DESTINATION "${WINTER_BIN_INSTALL_DIR}"
     COMPONENT bin)
 
-install(FILES ${WINTERMUTE_MOC_FILES}
-    DESTINATION ${WINTERMUTE_INCLUDE_DIR}
+install(FILES ${WINTERMUTE_HEADERS}
+    DESTINATION ${WINTER_INCLUDE_INSTALL_DIR}
     COMPONENT dev)
 
