--- a/cmake/WintermuteConfigVersion.cmake.in
+++ b/cmake/WintermuteConfigVersion.cmake.in
@@ -1,4 +1,4 @@
-set(PACKAGE_VERSION "0.01")
+set(PACKAGE_VERSION "@WINTERMUTE_VERSION@")
 
 # Check whether the requested PACKAGE_FIND_VERSION is compatible
 if("${PACKAGE_VERSION}" VERSION_LESS "${PACKAGE_FIND_VERSION}")
