--- a/Wintermute.pc.in
+++ b/Wintermute.pc.in
@@ -1,14 +1,14 @@
 prefix=@CMAKE_INSTALL_PREFIX@
 exec_prefix=${prefix}
 libdir=${prefix}/lib
-includedir=${prefix}/include
+includedir=@WINTERMUTE_INCLUDE_DIR@
 
 Name: Wintermute
 Description: Core files required to add extensibility to the Wintermute application by means of building a plug-in.
 Version: @GENERIC_LIB_VERSION@
 URL: https://www.launchpad.net/wintermute
-Requires: QtCore, python, Boost, wntrling, wntrdata, wntrntwk
+Requires: QtCore, python, wntrling, wntrdata, wntrntwk
 Conflicts: wntr > @GENERIC_LIB_VERSION@
 Libs: -L${libdir} @WINTERMUTE_LIBRARIES@
 Libs.private: -lm
-Cflags: -I${includedir}/wntr
+Cflags: -I${includedir}
