--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,6 +17,6 @@ install(TARGETS wintermute
     COMPONENT bin)
 
 install(FILES ${WINTERMUTE_HEADERS}
-    DESTINATION ${WINTER_INCLUDE_INSTALL_DIR}
+    DESTINATION "${WINTER_INCLUDE_INSTALL_DIR}"
     COMPONENT dev)
 
