--- a/config.hpp.in
+++ b/config.hpp.in
@@ -26,12 +26,15 @@
 #ifndef _WNTR_CONFIG_HPP__
 #define _WNTR_CONFIG_HPP__
 
-#cmakedefine DEBUG
+#cmakedefine01 DEBUG
 
 #define WINTERMUTE_SERVICE_NAME "org.thesii.Wintermute"
 #define WINTERMUTE_VERSION @WINTERMUTE_VERSION@
 #define WINTER_PLUGIN_PATH "@WINTER_PLUGIN_INSTALL_DIR@"
 #define WINTER_PLUGINSPEC_PATH "@WINTER_PLUGINSPEC_INSTALL_DIR@"
+
+#define WNTRDATA_DEFAULT_LOCALE "en"
+#define WNTRDATA_DATA_DIR "/usr/share/wintermute/data"
 
 #endif // __CONFIG_HPP__
 
