Cleanups, cleanups, cleanups...
* Removed autoprepare.sh because it is not needed now.
* Removed Curses dependency because it is used by Core now.
  - Removed code associated with nCurses.
* Corrected config.hpp.in managing.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,6 @@ include(WintermuteMacros)
 ## Packages
 set(CURSES_NEED_NCURSES ON)
 #find_package(QPackageKit 0.6.11 REQUIRED)
-find_package(Curses REQUIRED)
 find_package(PkgConfig REQUIRED)
 find_package(Boost 1.42 COMPONENTS
     system
@@ -35,7 +34,7 @@ include("${QT_USE_FILE}")
 enable_doxygen()
 
 ## Files
-file(GLOB CMAKE_MODULES "${PROJECT_SOURCE_DIR}/cmake/Modules/*.cmake")
+file(GLOB WINTER_CMAKE_MODULES "${PROJECT_SOURCE_DIR}/cmake/Modules/*.cmake")
 
 ## Main variables
 set(VS_KEYWORD Qt4VSv1.0)
@@ -58,6 +57,7 @@ set(WINTERMUTE_CMAKE_DIR "${CMAKE_INSTALL_PREFIX}/share/cmake/Wintermute" CACHE 
 
 ## Include directories
 include_directories(${WINTERMUTE_INCLUDE_DIRS})
+include_directories(${PROJECT_BINARY_DIR})
 
 ## Configs
 
@@ -71,7 +71,7 @@ configure_file("${PROJECT_SOURCE_DIR}/Wintermute.pc.in"
    "${PROJECT_BINARY_DIR}/InstallFiles/Wintermute.pc" @ONLY)
 
 configure_file("${PROJECT_SOURCE_DIR}/config.hpp.in"
-    "${PROJECT_SOURCE_DIR}/src/config.hpp" @ONLY)
+    "${PROJECT_BINARY_DIR}/config.hpp" @ONLY)
 
 add_subdirectory(src)
 
@@ -80,8 +80,8 @@ add_subdirectory(src)
 install(FILES "${PROJECT_BINARY_DIR}/InstallFiles/Wintermute.pc"
     DESTINATION "${WINTER_LIB_INSTALL_DIR}/pkgconfig/")
 
-install(FILES ${CMAKE_MODULES}
-    DESTINATION "${CMAKE_MODULE_DIR}")
+install(FILES ${WINTER_CMAKE_MODULES}
+    DESTINATION "${WINTERMUTE_CMAKE_DIR}")
 
 install(FILES "${PROJECT_BINARY_DIR}/InstallFiles/WintermuteConfig.cmake"
           "${PROJECT_BINARY_DIR}/InstallFiles/WintermuteConfigVersion.cmake"
