Configured framework system to have personalized plug-in settings as well moving backend plug-ins to run in the same sandbox as the defined framework API.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,10 +8,10 @@ file(GLOB WINTERMUTE_HEADERS "*.hpp")
 QT4_WRAP_CPP(WINTERMUTE_SOURCES ${WINTERMUTE_HEADERS})
 
 ## Targets
-
 add_executable(wintermute ${WINTERMUTE_SOURCES})
 target_link_libraries(wintermute ${WINTERMUTE_LIBRARIES})
 
+## Installs
 install(TARGETS wintermute
     RUNTIME DESTINATION "${WINTER_BIN_INSTALL_DIR}"
     COMPONENT bin)
