Provide more definite #define's for Wintermute and plug-ins using D-Bus.

--- a/config.hpp.in
+++ b/config.hpp.in
@@ -28,19 +28,29 @@
 
 #cmakedefine01 DEBUG
 
-// DBus section
-#define WINTERMUTE_SERVICE_NAME "org.thesii.Wintermute"
+// D-Bus Section
+#define WNTR_DBUS_SERVICE_NAME "org.thesii.Wintermute"
 
-// Project info
-#define WINTERMUTE_VERSION @WINTERMUTE_VERSION@
+#define WNTR_DBUS_FACTORY_NAME WNTR_DBUS_SERVICE_NAME".Factory"
+#define WNTR_DBUS_FACTORY_OBJNAME "/Factory"
+#define WNTR_DBUS_FACTORY_OBJPATH WNTR_DBUS_SERVICE_NAME".Factory"
 
-// Plugin system data
-#define WINTER_PLUGIN_PATH "@WINTER_PLUGIN_INSTALL_DIR@"
-#define WINTER_PLUGINSPEC_PATH "@WINTER_PLUGINSPEC_INSTALL_DIR@"
+#define WNTR_DBUS_MASTER_NAME WNTR_DBUS_SERVICE_NAME".Master"
 
-// Compile-time configuration
-#define WINTERMUTE_LOCALE "@WINTERMUTE_LOCALE@"
-#define WINTER_DATA_INSTALL_DIR "@WINTER_DATA_INSTALL_DIR@"
+#define WNTR_DBUS_PLUGIN_NAME WNTR_DBUS_SERVICE_NAME".Plugin"
+#define WNTR_DBUS_PLUGIN_OBJNAME "/Plugin"
+#define WNTR_DBUS_PLUGIN_OBJPATH WNTR_DBUS_SERVICE_NAME".Plugin"
+
+// Project Information
+#define WNTR_VERSION @WINTERMUTE_VERSION@
+
+// Plug-in System Data
+#define WNTR_PLUGIN_PATH "@WINTER_PLUGIN_INSTALL_DIR@"
+#define WNTR_PLUGINSPEC_PATH "@WINTER_PLUGINSPEC_INSTALL_DIR@"
+
+// Build-time Configuration
+#define WNTR_LOCALE "@WINTERMUTE_LOCALE@"
+#define WNTR_DATA_DIR "@WINTER_DATA_INSTALL_DIR@"
 
 #endif // __CONFIG_HPP__
 
