--- a/org.thesii.Wintermute.service.in
+++ b/org.thesii.Wintermute.service.in
@@ -1,3 +1,3 @@
 [D-Bus Service]
 Name=org.thesii.Wintermute
-Exec=@CMAKE_INSTALL_PREFIX@/wintermute --daemon true --ipc master
+Exec=@CMAKE_INSTALL_PREFIX@/bin/wintermute --daemon true --ipc master
