Corrected install location of default settings. It might not would work well with the Debian build system.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,5 +77,5 @@ install(FILES "${PROJECT_BINARY_DIR}/InstallFiles/WintermuteConfig.cmake"
         DESTINATION "${WINTERMUTE_CMAKE_DIR}")
 
 ## @todo Add it to a system wide location.
-install(FILES "${PROJECT_SOURCE_DIR}/default.conf"
-	DESTINATION "~/.config/Synthetic Intellect Institute/default.conf")
+install(FILES "${PROJECT_SOURCE_DIR}/Wintermute.conf"
+	DESTINATION "~/.config/Synthetic Intellect Institute")
