Patched CMakeLists.txt by hardcoding CMAKE_INSTALL_PREFIX to /usr

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,8 @@ set(WINTERMUTE_MINOR_VERSION 0)
 set(WINTERMUTE_MICRO_VERSION 1)
 set(WINTERMUTE_VERSION ${WINTERMUTE_MAJOR_VERSION}.${WINTERMUTE_MINOR_VERSION}${WINTERMUTE_MICRO_VERSION})
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
+set(CMAKE_INSTALL_PREFIX "/usr")
+set(CMAKE_BUILD_TYPE "Debug")
 
 ## Modules
 list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake/Modules")
