Corrected installation issues of Wintermute's CMake modules.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,8 @@ project(Wintermute)
 cmake_minimum_required(VERSION 2.8)
 set(WINTERMUTE_MAJOR_VERSION 0)
 set(WINTERMUTE_MINOR_VERSION 0)
-set(WINTERMUTE_MICRO_VERSION 1)
-set(WINTERMUTE_VERSION ${WINTERMUTE_MAJOR_VERSION}.${WINTERMUTE_MINOR_VERSION}${WINTERMUTE_MICRO_VERSION})
+set(WINTERMUTE_VERSION "${WINTERMUTE_MAJOR_VERSION}.${WINTERMUTE_MINOR_VERSION}")
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
-set(CMAKE_INSTALL_PREFIX "/usr")
-set(CMAKE_BUILD_TYPE "Debug")
 
 ## Modules
 list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake/Modules")
@@ -72,7 +69,7 @@ add_subdirectory(src)
 ## Installs
 
 install(FILES ${WINTER_CMAKE_MODULES}
-	DESTINATION "${WINTERMUTE_CMAKE_DIR}")
+	DESTINATION "${CMAKE_MODULE_DIR}")
 
 install(FILES "${PROJECT_BINARY_DIR}/InstallFiles/WintermuteConfig.cmake"
               "${PROJECT_BINARY_DIR}/InstallFiles/WintermuteConfigVersion.cmake"
