--- a/cmake/WintermuteConfig.cmake.in
+++ b/cmake/WintermuteConfig.cmake.in
@@ -4,6 +4,7 @@
 #  WINTERMUTE_LIBRARY_DIRS - library directories for WINTERMUTE (normally not used!)
 
 # Tell the user project where to find our headers and libraries
-set(WINTERMUTE_INCLUDE_DIRS @WINTERMUTE_INCLUDE_DIRS@)
-set(WINTERMUTE_LIBRARY_DIRS @WINTERMUTE_LIB_DIR@)
+set(WINTERMUTE_INCLUDE_DIRS "@WINTERMUTE_INCLUDE_DIRS@")
+set(WINTERMUTE_LIBRARIES "@WINTERMUTE_LIBRARIES@")
+set(WINTERMUTE_LIBRARY_DIRS "@WINTERMUTE_LIB_DIR@")
 
