--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,9 +13,13 @@ list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake/Modules")
 include(WintermuteDefaults)
 include(WintermuteMacros)
 
+## Default build type
 if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE ${WINTER_BUILD_TYPE})
 endif()
+
+## Install path
+set(CMAKE_INSTALL_PREFIX "/usr")
 
 ## Packages
 find_package(PackageKitQt2 REQUIRED)
@@ -31,6 +35,7 @@ find_package(Qt4 COMPONENTS
 
 include("${QT_USE_FILE}")
 
+## Doxygen
 enable_doxygen()
 
 ## Files
@@ -64,7 +69,7 @@ configure_file("${PROJECT_SOURCE_DIR}/cmake/WintermuteConfigVersion.cmake.in"
                 "${PROJECT_BINARY_DIR}/InstallFiles/WintermuteConfigVersion.cmake" @ONLY)
 
 configure_file("${PROJECT_SOURCE_DIR}/config.hpp.in"
-                "${PROJECT_SOURCE_DIR}/src/config.hpp" @ONLY)
+                "${PROJECT_BINARY_DIR}/src/config.hpp" @ONLY)
 
 
 dbus_add_activation_service(services/org.thesii.Wintermute.service.in)
