--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,12 +40,11 @@ set(WINTERMUTE_INCLUDE_DIRS "${WINTERMUTE_INCLUDE_DIR}"
     ${Boost_INCLUDE_DIRS}
     ${QT_INCLUDE_DIRS}
     ${WINTER_PLUGIN_INCLUDE_INSTALL_DIR})
-
 set(WINTERMUTE_LIBRARIES
     ${Boost_LIBRARIES}
     ${QT_LIBRARIES})
-
 set(WINTERMUTE_CMAKE_DIR "${CMAKE_INSTALL_PREFIX}/share/cmake/Wintermute" CACHE PATH "CMake directory.")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ggdb -O1")
 
 ## Include directories
 include_directories(${WINTERMUTE_INCLUDE_DIRS})
