--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,12 +7,11 @@ file(GLOB WINTERMUTE_SOURCES "*.cpp")
 file(GLOB WINTERMUTE_HEADERS "*.hpp")
 file(GLOB WINTERMUTE_PLUGIN_SOURCES "plugins/*.cpp")
 file(GLOB WINTERMUTE_PLUGIN_HEADERS "plugins/*.hpp")
-list(APPEND WINTERMUTE_SOURCES ${WINTERMUTE_PLUGIN_SOURCES})
-list(APPEND WINTERMUTE_HEADERS ${WINTERMUTE_PLUGIN_HEADERS})
 QT4_WRAP_CPP(WINTERMUTE_SOURCES ${WINTERMUTE_HEADERS})
+QT4_WRAP_CPP(WINTERMUTE_SOURCES ${WINTERMUTE_PLUGIN_HEADERS})
 
 ## Targets
-add_executable(wintermute ${WINTERMUTE_SOURCES})
+add_executable(wintermute ${WINTERMUTE_SOURCES} ${WINTERMUTE_PLUGIN_SOURCES})
 target_link_libraries(wintermute ${WINTERMUTE_LIBRARIES})
 
 ## Installs
@@ -22,5 +21,9 @@ install(TARGETS wintermute
 
 install(FILES ${WINTERMUTE_HEADERS}
     DESTINATION "${WINTER_INCLUDE_INSTALL_DIR}"
+    COMPONENT dev)
+
+install(FILES ${WINTERMUTE_PLUGIN_HEADERS}
+    DESTINATION "${WINTER_INCLUDE_INSTALL_DIR}/plugins"
     COMPONENT dev)
 
