Header now installed correctly + few cmake scripts corrections.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,10 +1,10 @@
 project(WintermuteCore)
-
 include(WintermuteDefaults)
 include(WintermuteMacros)
 
 file(GLOB WINTERMUTE_SOURCES "*.cpp")
 file(GLOB WINTERMUTE_HEADERS "*.hpp")
+file(GLOB top_HEADERS "*.hpp")
 file(GLOB plugins_SOURCES "plugins/*.cpp")
 file(GLOB plugins_HEADERS "plugins/*.hpp")
 list(APPEND WINTERMUTE_SOURCES ${plugins_SOURCES})
@@ -20,7 +20,11 @@ install(TARGETS wintermute
     RUNTIME DESTINATION "${WINTER_BIN_INSTALL_DIR}"
     COMPONENT bin)
 
-install(FILES ${WINTERMUTE_HEADERS}
+install(FILES ${top_HEADERS}
     DESTINATION "${WINTER_INCLUDE_INSTALL_DIR}"
+    COMPONENT dev)
+
+install(FILES ${plugins_HEADERS}
+    DESTINATION "${WINTER_INCLUDE_INSTALL_DIR}/plugins"
     COMPONENT dev)
 
